2008-04-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-read-file-or-url): Do not abuse completing-read's
	`predicate' argument to pass non-predicate data.
	(ffap-read-url-internal, ffap-read-file-or-url-internal):
	Use second arg as proper predicate.

	* vc-bzr.el (vc-bzr-complete-with-prefix): Remove.
	(vc-bzr-revision-completion-table): Use completion-table-with-context
	instead.

	* simple.el (choose-completion-string): Use minibuffer-completion-table.

2008-04-21  Chong Yidong  <cyd@stupidchicken.com>

	* term.el (term-emulate-terminal): Perform redisplay after the
	process filter has finished running.

2008-04-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-dir): Use pop-to-buffer, so it can be customized.

	* minibuffer.el (completion-try-completion): Change magic symbol
	property name.  Rename from minibuffer-try-completion.
	(completion-all-completions): Rename from minibuffer-all-completions.
	Remove hide-spaces argument.
	(completion--do-completion): Rename from minibuffer--do-completion.
	(minibuffer-complete-and-exit): Call just try-completion rather than
	completion-try-completion to fix up the case.
	(completion--try-word-completion): Try to add space or hyphen before
	making `string' a prefix of `completion'.
	(completion--insert-strings): Rename from minibuffer--insert-strings.

2008-04-22  Naohiro Aota  <nao.aota@gmail.com>  (tiny change)

	* net/tls.el (tls-program): Add -ign_eof argument to call the
	openssl commands.
	(tls-checktrust): Ditto.

2008-04-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-cvs.el (vc-cvs-status-extra-headers): New function.

	* vc-hooks.el (vc-insert-file, vc-state, vc-working-revision)
	(vc-check-master-templates, vc-file-not-found-hook)
	(vc-kill-buffer-hook):
	* vc.el (vc-process-sentinel, vc-exec-after, vc-do-command)
	(vc-find-position-by-context, vc-buffer-context)
	(vc-restore-buffer-context, vc-responsible-backend)
	(vc-expand-dirs, vc-ensure-vc-buffer, vc-buffer-sync)